force-app/main/default/objects/Activity/fields/Contents__c.field-meta.xml
<CustomField>
    <fullName>Contents__c</fullName>
    <inlineHelpText>文字数上限255字</inlineHelpText>
    <label>活動結果（詳細）</label>
    <type>TextArea</type>
</CustomField>