force-app/main/default/objects/Activity/fields/FutureActions__c.field-meta.xml
<CustomField>
    <fullName>FutureActions__c</fullName>
    <inlineHelpText>文字数上限255字</inlineHelpText>
    <label>今後のアクション</label>
    <type>TextArea</type>
</CustomField>