force-app/main/default/objects/Activity/fields/PlannedContents__c.field-meta.xml
<CustomField>
    <fullName>PlannedContents__c</fullName>
    <inlineHelpText>文字数上限255字</inlineHelpText>
    <label>活動予定</label>
    <type>TextArea</type>
</CustomField>