force-app/main/default/objects/Activity/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <inlineHelpText>文字数上限255字</inlineHelpText>
    <label>活動結果（概要）</label>
    <type>TextArea</type>
</CustomField>